--- a/task-commander/package.json
+++ b/task-commander/package.json
@@ -14,7 +14,11 @@
     "react": "^19.1.1",
     "react-big-calendar": "^1.19.4",
     "react-dom": "^19.1.1",
+    "react-redux": "^9.2.0",
     "react-scripts": "5.0.1",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
+    "sweetalert2": "^11.23.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
